estenografia completada y en funcionamiento correcto